# HETA

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  llms.txt  pyproject.toml  requirements.txt  robots.txt  run_heta.py  sitemap.xml  verify_all.py
.github/workflows/: indexnow.yml
heta/: __init__.py  cli.py  constants.py  engine.py  excel_writer.py  plotting.py
heta/gui/: link_analysis_tab.py  main_window.py  plot_canvas.py  suite_experiment_tab.py  worker.py
nets/: test_tree.net
